2013-04-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c: Fix CD-ROM and boot device
	detection.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/sys/types.h: Make WORDS_BIGENDIAN definition
	match config-util.h to avoid warnings and increase compatibility.

2013-04-14  Szymon Janc <szymon@janc.net.pl>
2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Add option to compress files on install/image creation.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub-dev.texi: Rearrange menu to match the section order.
	Reported by: Bryan Hundven.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c: Remove useless leftover pointer.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Move GRUB out of system area when using xorriso 1.2.9 or later.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_cmd_date.in: Add missing exit 1.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Skip on sparc64.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Support grub-shell on sparc64.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Support mkrescue on sparc64.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Allow IEEE1275 ports on path even if it wasn't detected automatically.
	Needed on OpenBIOS due to incomplete device tree.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c: Iterate over bootpath even if it
	would be otherwise excluded.

2013-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options):
	Inline name defines used only once.

2013-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix memory leaks in ofnet.
	Reported by: Francesco Lavra.

2013-04-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/man/grub-glue-efi.h2m: Add missing file.
